--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <!-- image 2 -->
                     <div id="sony-headphones-div" class="new-arrivals-all-images-div">
                         <a href="#">
-                            <img src="Images/Sony-headphones-fine-engineering.png" alt="sony headphones"
+                            <img src="images/Sony-headphones-fine-engineering.png" alt="sony headphones"
                                 class="new-arrivals-all-images" id="sony-headphones-img">
                         </a>
                     </div>
@@ -298,7 +298,7 @@
     }
 
     #newLaunchBox {
-        background: rgba(0, 0, 0, 0.7) url(Images/newLaunchMobile.jpg) no-repeat center center/cover;
+        background: rgba(0, 0, 0, 0.7) url(images/newLaunchMobile.jpg) no-repeat center center/cover;
         background-blend-mode: darken;
         height: 100vh;
         display: flex;
